create more commands

--- a/hacker-chat/client/package.json
+++ b/hacker-chat/client/package.json
@@ -6,6 +6,9 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
+    "user01": "node index.js --username ygormattos --room sala01 --hostUri localhost",
+    "user02": "node index.js --username mariazinha --room sala01 --hostUri localhost",
+    "user03": "node index.js --username mariazinha --room sala01 --hostUri https://localhost:9898",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
