--- a/hacker-chat/client/package.json
+++ b/hacker-chat/client/package.json
@@ -8,7 +8,8 @@
     "start": "node index.js",
     "user01": "node index.js --username ygormattos --room sala01 --hostUri http://localhost:9898",
     "user02": "node index.js --username mariazinha --room sala01 --hostUri http://localhost:9898",
-    "user03": "node index.js --username mariazinha --room sala01 --hostUri http://localhost:9898",
+    "user03": "node index.js --username joaozin --room sala02 --hostUri http://localhost:9898",
+    "user04": "node index.js --username ani009 --room sala02 --hostUri http://localhost:9898",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
