--- a/hacker-chat/client/package.json
+++ b/hacker-chat/client/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "client",
+  "name": "@ygumattos/new-hacker-chat-client",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
+  "bin": {
+    "hacker-chat": "index.js"
+  },
   "scripts": {
     "start": "node index.js",
     "user01": "node index.js --username ygormattos --room sala01 --hostUri http://localhost:9898",
     "user02": "node index.js --username mariazinha --room sala01 --hostUri http://localhost:9898",
     "user03": "node index.js --username joaozin --room sala02 --hostUri http://localhost:9898",
     "user04": "node index.js --username ani009 --room sala02 --hostUri http://localhost:9898",
+    "user05": "node index.js --username joaozin --room sala02",
+    "user06": "node index.js --username ani009 --room sala02",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com/ygumattos"
   },
   "keywords": [],
   "author": "",
